--- a/3.html
+++ b/3.html
@@ -2,18 +2,54 @@
 <html>
 <head><title>WEB!</title>
 <meta charset="utf-8">
+
+<style>
+    h1{
+        border-bottom:2px solid black;
+        padding: 30px;
+    }
+    a{
+        text-decoration-line:none;
+    }
+    #container{
+        display: grid;
+        grid-template-columns: 150px 1fr;
+    }
+    @media all and (min-width: 900px){
+        body{
+            background-color:rgb(255, 255, 255);
+        }
+    }
+    @media all and (max-width: 900px){
+        body{
+            background-color:rgb(210, 218, 226);
+        }
+    }
+    body{
+        font-family: 'Oswald', sans-serif;
+    }
+</style>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <h1><a href="index.html">WEB</a></h1>
-    <ol>
-        <li><a href="1.html">html</a></li>
-        <li><a href="2.html">css</a></li>
-        <li><a href="3.html">JavaScript</a></li>
-    </ol>
-WWW is <u>XIXI <strong>World</strong> WEB</u>.<br>
-<img src="https://images.unsplash.com/photo-1545229765-7ff613f80127?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80" width="300">
+    <div id="container">
+        <ol>
+            <li><a href="1.html">html</a></li>
+            <li><a href="2.html">css</a></li>
+            <li><a href="3.html">JavaScript</a></li>
+        </ol>
+        <div>
+        <h2>WWW is <u>XIXI <strong>World</strong> WEB</u></h2>.<br>
+        <h2>JavaScript</h2>
+        JavaScript is...
+        </div>
+    </div>
 
-<h2>JavaScript</h2>
-JavaScript is...
+<img src="https://images.unsplash.com/photo-1545229765-7ff613f80127?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80" width="150">
+
 </body>
 </html>
