--- a/2.html
+++ b/2.html
@@ -5,7 +5,7 @@
 
 <style>
     h1{
-        border-bottom:2px solid black;
+        border-bottom:2px solid rgb(112, 129, 161);
         padding: 30px;
     }
     a{
@@ -36,6 +36,7 @@
 </head>
 <body>
     <h1><a href="index.html">WEB</a></h1>
+    <img src="https://images.unsplash.com/photo-1596487162379-fbab6c590a42?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1932&q=80" width="900" height="300">
     <div id="container">
         <ol>
             <li><a href="1.html">html</a></li>
@@ -44,12 +45,33 @@
         </ol>
         <div>
         <h2>WWW is <u>XIXI <strong>World</strong> WEB</u></h2>.<br>
-        <h2>css</h2>
-        css is...
+        <h2>CSS</h2>
+        CSS is...
         </div>
     </div>
 
-<img src="https://images.unsplash.com/photo-1545229765-7ff613f80127?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80" width="150">
+</body>
+</html>
+
+<div id="disqus_thread"></div>
+<script>
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://daegu-ai-school.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 
 </body>
 </html>
