--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <style>
         h1{
-            border-bottom:2px solid black;
+            border-bottom:2px solid rgb(112, 129, 161);
             padding: 30px;
         }
         a{
@@ -32,8 +32,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <h1><a href="index.html">WEB</a></h1>
+    <img src="https://images.unsplash.com/photo-1596487162379-fbab6c590a42?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1932&q=80" width="900" height="300">
     <div id="container">
         <ol>
             <li><a href="1.html">html</a></li>
@@ -45,7 +47,6 @@
         </div>
     </div>
     
-<img src="https://images.unsplash.com/photo-1545229765-7ff613f80127?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80" width="150">
 </body>
 </html>
 
